# chaim-g

./: .gitignore  README.md  pre-commit.sh  pyproject.toml
chaimg/: __init__.py  chaimg.py
src/chaim_g/: __init__.py  chaim_g.py
