[tool.poetry]
name = "chaim-g"
version = "0.1.0"
description = "gui for chaim client"
authors = ["ccdale <chris.charles.allison+chaim-g@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/ccdale/chaim-g"
repository = "https://github.com/ccdale/chaim-g"

[tool.poetry.dependencies]
python = ">=3.6"
wxpython = "^4.0.7"
chaim = "^0.7.4"
ccalogging = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
