[tool.poetry]
name = "chaimg"
version = "0.1.0"
description = "gui for chaim client"
authors = ["ccdale <chris.charles.allison+chaim-g@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/ccdale/chaim-g"
repository = "https://github.com/ccdale/chaim-g"

[tool.poetry.dependencies]
python = "^3.7"
chaim = "^0.8.0"
PySimpleGUI = "^4.19.0"
ccautils = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.2"}
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
